  * pdf.js is no longer an extension
    - update debian/firefox.install.in
  * Drop the plugin / abrowser / firefox-branding replaces + breaks on quantal
    - update debian/rules
  * On precise and newer, enable the crash reporter on armhf rather than armel
    - update debian/build/mozbuild.mk
  * Whitelist i386, amd64 and armhf for PGO
    - update debian/build/mozbuild.mk

 -- Chris Coulson <chris.coulson@canonical.com>  Tue, 22 May 2012 02:15:01 +0100

firefox-trunk (14.0~a1~hg20120424r92149-0ubuntu1) precise; urgency=low

  * New upstream snapshot v14.0 A1 HG20120424R92149

  [ Chris Coulson <chris.coulson@canonical.com> ]
  * Update globalmenu-extension to 3.2.3
  * Drop patches fixed upstream
    - remove debian/patches/no-sps-profiler-on-unsupported-archs.patch
    - update debian/patches/series
  * Refresh patches
    - update debian/patches/ubuntu-codes-google.patch
    - update debian/patches/revert-bmo621446-investigation.patch
    - update debian/patches/dont-include-hyphenation-patterns.patch
    - update debian/patches/change-moz-app-name.patch
    - update debian/patches/allow-lockPref-everywhere.patch
    - update debian/patches/plugin-for-mimetype-pref.patch
    - update debian/patches/firefox-kde.patch
    - update debian/patches/add-syspref-dir.patch
  * Install pdf.js
    - update debian/firefox.install.in
  * Add Keywords to the desktop file
    - update debian/firefox.desktop.in
  * Update desktop file translations
    - update debian/firefox.sh.in
  * Ensure that additional actions in the desktop file match the fd.o spec
    in precise
    - update debian/firefox.desktop.in
    - update debian/rules
  * Fix a small leak in nsPluginHost::FindPluginForType, caused by one
    of our patches
    - update debian/patches/plugin-for-mimetype-pref.patch
  * When a plugin is chosen using a "modules.plugins.mimetype." pref,
    only use it if it is enabled and handles the requested mimetype
    - update debian/patches/plugin-for-mimetype-pref.patch